# signatory

./: pyproject.toml  setup.py
signatory/: setup.py
