[tool.poetry]
name = "signatory"
version = "0.1.0"
description = ""
authors = ["Vojtěch Kubín <vojta.kubin@atol.capital>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
